# parlamentodb

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  pytest.ini
app/: config.py  dependencies.py  main.py
app/models/: atividade.py  cap.py  circulo.py  common.py  deputado.py  evento.py  iniciativa.py  legislatura.py  partido.py  partidos.py  stats.py  validators.py  votacao.py
app/queries/: partidos.py  stats.py  utils.py
app/routers/: atividades.py  cap.py  circulos.py  deputados.py  health.py  iniciativas.py  legislaturas.py  partidos.py  stats.py  votacoes.py
data/cap_source/: cap_l16.csv  cap_l17.csv
deploy/: k3s-deployment.yaml
etl/: __main__.py  fetch.py  schema.py  transform.py
k8s/: parlamentodb.yaml  traefik.yaml
samples/csv/: info_l17_deputados.csv  l17.csv  l17_deputados.csv
tests/: conftest.py  test_api.py  test_regressions.py
tests/integration/: test_critical_paths.py  test_error_handling.py  test_filters.py
