[tool.poetry]
name = "parlamentodb"
version = "0.1.0"
description = "Portuguese Parliament Data ETL Pipeline"
authors = ["Frederico Muñoz <fsmunoz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.1.0"
httpx = "^0.27.0"
structlog = "^24.4.0"
tenacity = "^8.5.0"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.18"
pytz = "^2025.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.0"
hypothesis = "^6.112.0"
schemathesis = "^3.34.0"
pytest-timeout = "^2.3.0"
pytest-randomly = "^3.15.0"
ruff = "^0.6.0"
mypy = "^1.11.0"
ipython = "^8.27.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
